[package]
name = "revm_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0.75"
dashmap = "5.5.3"
hex-literal = "0.4.1"
hex = "0.4.3"
bytes = "1.5.0"
dotenv = "0.15.0"
auto_impl = { version = "1.1.0", default-features = false }

# ethers
ethers-providers = "2.0.10"
ethers-core = "2.0.10"
ethers-contract = { version = "2.0.10", default-features = false }
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }

# async
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

# logging
log = "0.4.20"
fern = {version = "0.6.2", features = ["colored"]}
chrono = "0.4.31"
colored = "2.0.4"

# github
cfmms = "0.6.2"
